k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: default
  labels:
    app: frontend
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          # The CI pipeline will automatically update the tag here on every commit.
          image: devops-daily-tracker-frontend:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          # Setup health checks to allow Kubernetes to monitor container health
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            limits:
              cpu: "200m"
              memory: "128Mi"
            requests:
              cpu: "50m"
              memory: "64Mi"
